# louie-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .secret-patterns.md  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOP.md  NOTEBOOK_FIX_PLAN.md  README.md  SESSION_SUMMARY.md  SESSION_SUMMARY_PHASE_3B_COMPLETE.md  audit_script.py  debug_dataframe_issue.py  debug_df_fetch.py  debug_df_simple.py  debug_notebook.py  debug_org_auth.py  debug_org_name.py  debug_streaming.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  test_df_integration.py  test_df_simple.py  test_failure_report.md  test_notebook_behavior.py  test_notebook_streaming.py  test_real_streaming.py  test_repair_summary.md  test_streaming_notebook.ipynb
.github/workflows/: ci.yml  publish.yml  release.yml  secret-detection-test.yml  test.yml  validate-tags.yml
AI_PROGRESS/: PLAN_TEMPLATE.md  README.md
ai/: README.md
ai/prompts/: PLAN.md
docs/: TAGGING.md  architecture.md  authentication.md  development.md  examples.md  index.md  query-patterns.md  testing-type-export.md  type-export-integration.md  uv-best-practices.md
docs/api/: client.md  index.md  notebook.md  response-types.md
docs/dev/: review-checklist.md  review-summary.md  testing-guide.md  validation-report.md
docs/developer/: development.md  testing.md
docs/examples/: graph_access.py
docs/getting-started/: authentication.md  quick-start.md
docs/getting-started/notebooks/: 01-getting-started.ipynb  02-data-science-workflow.ipynb  02-data-upload.ipynb  03-fraud-investigation.ipynb  04-error-handling.ipynb  05-vibes-investigation-I.ipynb  05-vibes-investigation-tutorial.ipynb  06-vibes-investigation-II-planning.ipynb  07-vibes-investigation-III.ipynb
docs/guides/: agent-selection.md  authentication.md  examples.md  query-patterns.md
docs/guides/agents/: bigquery.md  databricks.md  index.md  mysql.md  opensearch.md  postgresql.md  snowflake.md  splunk.md
docs/migration/: env-vars.md
docs/notebooks/: 01-getting-started.ipynb  02-data-science-workflow.ipynb  03-fraud-investigation.ipynb  04-error-handling.ipynb
docs/reference/: agents.md
plans/: docs-catalog.md  docs-categorized.md  docs-implementation-plan-v2.md  docs-implementation-plan.md  docs-reframing.md  docs-structure.md  docs-summary.md  element-types-example.json  recommendations.md  return-types-analysis.md  roleplay-data-analyst.md  roleplay-devops-engineer.md  roleplay-security-analyst.md  type-export-design.md  type-export-research.md
plans/init/: plan-original.md  plan-overview.md  plan-phase-1a.md  plan-phase-1b.md  plan-phase-2.md  plan-phase-2a.md  plan-phase-2b.md  plan-phase-3.md  plan-phase-3b.md
scripts/: ci-local.sh  ci-quick.sh  generate_type_docs.py  pytest.sh  test-secret-detection.sh  test_type_workflow.py  validate-readthedocs.sh  validate-version-tag.py
scripts/ci/: secret-detection.sh
scripts/notebook-utils/: clean-notebook-outputs.py
src/louieai/: __init__.py  _client.py  _upload.py  _version.py  auth.py  client.py  globals.py
src/louieai/notebook/: __init__.py  cursor.py  exceptions.py  streaming.py
templates/: export_element_types.py
test_consumer/: test_types.py
tests/: conftest.py  doc_fixtures.py  run_doc_tests.py  secret_patterns_reference.py  test_doc_examples.py  test_doc_examples_safe.py  test_louie_client.py  utils.py
tests/integration/: test_arrow_dataframe_integration.py  test_databricks_empty_text.py  test_documentation_integration.py  test_notebook_experience.py  test_real_louie.py
tests/integration/notebook/: test_basic_flow.py  test_df_text_behavior_integration.py  test_mock_flow.py  test_streaming_real.py
tests/performance/notebook/: test_trace_overhead.py
tests/unit/: fixtures.py  mock_responses.py  mocks.py  test_arrow_format.py  test_auth.py  test_callable_module.py  test_cascade_simple.py  test_client.py  test_client_callable.py  test_cursor_image_binary.py  test_cursor_text_extraction.py  test_dataframe_fetching.py  test_documentation.py  test_element_compatibility.py  test_extract_org_coverage.py  test_graph_access.py  test_image_binary_upload.py  test_imports.py  test_init_import_coverage.py  test_inline_dataframe_display.py  test_louie_factory.py  test_mock_responses.py  test_org_auth_flow.py  test_upload_coverage.py  test_upload_edge_cases.py
tests/unit/notebook/: test_api_key_auth.py  test_cursor.py  test_cursor_display.py  test_dataframe_access.py  (+14 more)
